允许一人投多张票，可查询一人投的多张票 (#13)
* .

* .

* .

* .

* .

* .

* Delete test2.sqlite3

* .

* .

Co-authored-by: 021800527 <54802601+021800527@users.noreply.github.com>

--- a/one/templates/search.html
+++ b/one/templates/search.html
@@ -34,8 +34,9 @@
             <tr>        {# 一个tr代表的是一行 #}
                 <td>{{ user.id }}</td>
                 <td>{{ user.from1 }}</td>
-                {% if user.to ==0 %}
+                {% if user.to =='' %}
                 <td>还未投票</td>
+{#                    <td>{{ user.to }}</td>#}
                 {% else %}
                 <td>{{ user.to }}</td>
             {% endif %}
