--- a/one/templates/success.html
+++ b/one/templates/success.html
@@ -55,9 +55,22 @@ window.location.href=url;
     <title>sorry</title>
 </head>
 <body>
-<tr>
-    <td>投票成功</td>
-</tr>
-<a href="{{ url_for('jump',id=2) }}">点击我退出</a>
+<div class="content" align="center">
+    <div class="card" onclick="tzlinks()" >
+        <div class="header">
+
+            <a id="frelinks" style="text-decoration:none;font-size: 30px;color: #ffffff;display:block;" href="{{ url_for('jump',id=2) }}"  >投票成功</a>
+        </div>
+        <div class="body">
+           <p>点击我退出</p>
+        </div>
+    </div>
+    </div>
+<script type="text/javascript">
+function tzlinks(){
+var url=document.getElementById('frelinks').href;
+window.location.href=url;
+}
+</script>
 </body>
 </html>
