限制输入组号 (#14)
* .

* .

* .

* .

* .

* .

* Delete test2.sqlite3

* .

* .

* .

Co-authored-by: 021800527 <54802601+021800527@users.noreply.github.com>

--- a/one/templates/error2.html
+++ b/one/templates/error2.html
@@ -39,10 +39,10 @@
     <div class="card" onclick="tzlinks()" >
         <div class="header">
 
-            <a id="frelinks" style="text-decoration:none;font-size: 30px;color: #ffffff;display:block;" href="{{ url_for('jump3',id=uid) }}"  >对不起，只能投一张票</a>
+            <a id="frelinks" style="text-decoration:none;font-size: 30px;color: #ffffff;display:block;" href="{{ url_for('jump',id=2) }}"  >对不起，组号范围为1-11</a>
         </div>
         <div class="body">
-           <p>点击我返回投票</p>
+           <p>点击我返回登录</p>
         </div>
     </div>
     </div>
